Added missing files, renamed project, bumped version number etc...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
-project(simu
-        VERSION 0.0.1
-        DESCRIPTION "RBS simulator. Shitty."
+project(jabs
+        VERSION 0.1.0
+        DESCRIPTION "Jaakko's Backscattering Simulator (JaBS)"
         LANGUAGES C
         )
 
@@ -23,13 +23,13 @@ if(DEBUG_OUTPUT_ENABLE)
     add_compile_options(-DDEBUG)
 endif()
 
-add_executable(simu main.c sample.c sample.h brick.c ion.c ion.h simulation.c simulation.h reaction.c reaction.h)
-target_include_directories(simu PRIVATE ${GETOPT_INCLUDE_DIR})
+add_executable(jabs main.c sample.c sample.h brick.c ion.c ion.h simulation.c simulation.h reaction.c reaction.h)
+target_include_directories(jabs PRIVATE ${GETOPT_INCLUDE_DIR})
 
-target_link_libraries(simu
+target_link_libraries(jabs
     PRIVATE Jibal 
     PRIVATE GSL::gsl
     PRIVATE "$<$<BOOL:${UNIX}>:m>" ${GETOPT_LIBRARY}
     )
 
-install(TARGETS simu RUNTIME DESTINATION bin)
+install(TARGETS jabs RUNTIME DESTINATION bin)
