Experimental spectrum stuff moved out of main.c.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ if(DEBUG_OUTPUT_ENABLE)
 endif()
 
 add_executable(jabs main.c sample.c sample.h brick.c ion.c ion.h simulation.c simulation.h
-        reaction.c reaction.h layers.c layers.h options.c options.h)
+        reaction.c reaction.h layers.c layers.h options.c options.h spectrum.c spectrum.h)
 target_include_directories(jabs PRIVATE ${GETOPT_INCLUDE_DIR})
 
 target_link_libraries(jabs
