--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ endif()
 
 add_executable(jabs main.c sample.c sample.h brick.c ion.c ion.h simulation.c simulation.h reaction.c reaction.h
         layers.c layers.h options.c options.h spectrum.c spectrum.h fit.c fit.h rotate.c rotate.h detector.c detector.h
-        jabs.c jabs.h)
+        jabs.c jabs.h roughness.c roughness.h)
 target_include_directories(jabs PRIVATE ${GETOPT_INCLUDE_DIR})
 
 target_link_libraries(jabs
