Usability improvements, mostly related to editor in QJaBS.

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -76,6 +76,11 @@ set(PROJECT_SOURCES
        qcustomplot.h
        spectrumplot.cpp
        spectrumplot.h
+       icons.qrc
+       codeeditor.cpp
+       codeeditor.h
+       highlighter.cpp
+       highlighter.h
 )
 
 qt_add_executable(qjabs
