Split script.c into several files (somewhat unnecessarily too). Script loading restructured, stack overflows are impossible since script_process() is no longer recursive.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,9 @@ endif()
 
 add_executable(jabs main.c sample.c sample.h brick.c ion.c ion.h simulation.c simulation.h reaction.c reaction.h
         options.c options.h spectrum.c spectrum.h fit.c fit.h rotate.c rotate.h detector.c detector.h jabs.c jabs.h
-        roughness.c roughness.h script.c script.h generic.c generic.h message.c message.h aperture.c aperture.h geostragg.c generic.h)
+        roughness.c roughness.h script.c script.h generic.c generic.h message.c message.h aperture.c aperture.h
+        geostragg.c geostragg.h script_command.c script_command.h script_session.c script_session.h script_file.c
+        script_file.h)
 
 target_include_directories(jabs PRIVATE ${GETOPT_INCLUDE_DIR})
 
