Header update for Qt interface. Highlighter fixed.

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -81,6 +81,7 @@ set(PROJECT_SOURCES
         ../script_session.h
         ../script_file.c
         ../script_file.h
+        ../script_generic.h
        main.cpp
        mainwindow.cpp
        mainwindow.h
