QJaBS CMakeLists.txt also includes calibration.c and .h

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -82,6 +82,8 @@ set(PROJECT_SOURCES
         ../script_file.c
         ../script_file.h
         ../script_generic.h
+        ../calibration.c
+        ../calibration.h
        main.cpp
        mainwindow.cpp
        mainwindow.h
