Don't show command prompt on Windows.

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -110,6 +110,7 @@ set_source_files_properties(${app_icon_macos} PROPERTIES
 if (WIN32)
    set(app_icon_resource_windows "${CMAKE_CURRENT_SOURCE_DIR}/icon.rc")
    qt_add_executable(qjabs
+	WIN32
         ${PROJECT_SOURCES}
 	${app_icon_resource_windows}
     )
