Changed QJaBS application name and bundle name on macOS to be "JaBS".

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -139,7 +139,7 @@ target_link_libraries(qjabs
     )
 
 set_target_properties(qjabs PROPERTIES
-    MACOSX_BUNDLE_BUNDLE_NAME QJaBS
+    MACOSX_BUNDLE_BUNDLE_NAME JaBS
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE_ICON_FILE icon.icns
