Added a dialog to change some plot properties, including option to show isotopes of one element or all elements. These settings are saved. Improvements in plot (colors etc).

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -94,6 +94,7 @@ set(PROJECT_SOURCES
        spectrumplot.cpp spectrumplot.h
        codeeditor.cpp codeeditor.h
        highlighter.cpp highlighter.h
+       plotdialog.h plotdialog.cpp plotdialog.ui
        icons.qrc
 )
 
