Added install for QJabs and desktop entry (freedesktop, i.e. typically Linux) and MIME-type file that together with the desktop file should associate JaBS with JaBS scripts.

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -145,3 +145,10 @@ set_target_properties(qjabs PROPERTIES
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE_ICON_FILE icon.icns
 )
+
+install(TARGETS qjabs RUNTIME DESTINATION bin)
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    install(FILES jabs.desktop DESTINATION share/applications)
+    install(FILES jabs.xml DESTINATION share/mime/packages) 
+    install(FILES icons/jabs.svg DESTINATION share/icons/hicolor/scalable/apps)
+endif()
