Added a preferences dialog, fonts and JIBAL configuration file can be changed using it.

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -95,6 +95,7 @@ set(PROJECT_SOURCES
        codeeditor.cpp codeeditor.h
        highlighter.cpp highlighter.h
        plotdialog.h plotdialog.cpp plotdialog.ui
+       preferencesdialog.h preferencesdialog.cpp preferencesdialog.ui
        icons.qrc
 )
 
