--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,7 @@ endif()
 
 add_subdirectory(gitwatcher)
 
-#Read version from file
-file(READ "${CMAKE_CURRENT_LIST_DIR}/version.txt" BUILD_VERSION)
-string(STRIP "${BUILD_VERSION}" BUILD_VERSION)
-
+include(version.cmake)
 
 project(jabs
         VERSION "${BUILD_VERSION}"
