Changed how the straggling weighting of cross sections (gaussian probability distribution) is calculated. This one is easier to understand and less prone to errors, since it is based on a CFD from GSL. Also changed functions related to sim_calc_params (copying, setting defaults etc). Script command to set one of the default "profiles" (defaults, accurate, fast, brisk) added. Also added variables to control number of steps via scripts.

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -88,6 +88,8 @@ set(PROJECT_SOURCES
         ../src/script_generic.h
         ../src/calibration.c
         ../src/calibration.h
+        ../src/prob_dist.h
+        ../src/prob_dist.c
        main.cpp
        mainwindow.cpp mainwindow.h mainwindow.ui
        fitdialog.cpp fitdialog.h fitdialog.ui
