--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,3 +1,14 @@
+#
+#    Jaakko's Backscattering Simulator (JaBS)
+#    Copyright (C) 2021 - 2023 Jaakko Julin
+#
+#   This program is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License as published by
+#   the Free Software Foundation; either version 2 of the License, or
+#   (at your option) any later version.
+#   See LICENSE.txt for the full license.
+#
+
 cmake_minimum_required(VERSION 3.15)
 project(testplugin
     VERSION 0.0.1
