--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,7 +26,7 @@ add_executable(jabs main.c sample.c sample.h brick.c ion.c ion.h simulation.c si
         roughness.c roughness.h script.c script.h generic.c generic.h message.c message.h aperture.c aperture.h
         geostragg.c geostragg.h script_command.c script_command.h script_session.c script_session.h script_file.c
         script_file.h calibration.c calibration.h script_generic.h prob_dist.c prob_dist.h
-        "$<$<BOOL:${PLUGINS}>:plugin.c>"
+        "$<$<BOOL:${JABS_PLUGINS}>:plugin.c>"
         )
 
 target_include_directories(jabs PRIVATE ${GETOPT_INCLUDE_DIR})
