idf2jbs added to jabs command line version

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ set(CMAKE_C_STANDARD 99)
 configure_file(version.h.in version.h @ONLY)
 find_package(GSL 2.6 REQUIRED)
 find_package(Jibal 0.3.8 REQUIRED)
+find_package(LibXml2 REQUIRED)
 
 if(WIN32)
     find_path(GETOPT_INCLUDE_DIR getopt.h)
@@ -26,6 +27,7 @@ add_executable(jabs main.c sample.c sample.h brick.c ion.c ion.h simulation.c si
         roughness.c roughness.h script.c script.h generic.c generic.h message.c message.h aperture.c aperture.h
         geostragg.c geostragg.h script_command.c script_command.h script_session.c script_session.h script_file.c
         script_file.h calibration.c calibration.h script_generic.h prob_dist.c prob_dist.h
+        idf2jbs.c idf2jbs.h idfelementparsers.c idfelementparsers.h idfparse.c idfparse.h
         "$<$<BOOL:${JABS_PLUGINS}>:plugin.c>"
         )
 
@@ -34,6 +36,7 @@ target_include_directories(jabs PRIVATE ${GETOPT_INCLUDE_DIR})
 target_link_libraries(jabs
     PRIVATE jibal
     PRIVATE GSL::gsl
+    PRIVATE LibXml2::LibXml2
     PRIVATE "$<$<BOOL:${UNIX}>:m>"
     ${GETOPT_LIBRARY} gitwatcher
     )
